Import of DRUOSO/Server-FastPL-1.0.2 from CPAN.
gitpan-cpan-distribution: Server-FastPL
gitpan-cpan-version:      1.0.2
gitpan-cpan-path:         DRUOSO/Server-FastPL-1.0.2.tar.gz
gitpan-cpan-author:       DRUOSO
gitpan-cpan-maturity:     released

--- a/README
+++ b/README
@@ -108,7 +108,7 @@ DESCRIPTION
 ENVIRONMENT
     Signals:
 
-    This module uses two signals: USR1 and CHLD. Do not use these in
+    This module uses three signals: USR1, USR2 and CHLD. Do not use these in
     your script or the server will not work.
 
     Child processes:
